--- a/BioVitalAge/templates/cartella_paziente/indici_di_performance/valutazioneMS.html
+++ b/BioVitalAge/templates/cartella_paziente/indici_di_performance/valutazioneMS.html
@@ -83,7 +83,7 @@
                             <h3>Attività fisica</h3>
                         </div>
                             
-                        <div class="table-container" style="height: 330px;">
+                        <div class="table-container attivita_fisica">
 
                             <div class="table-row">
                                 <div class="question-container">
@@ -166,33 +166,39 @@
                 <div class="card-container">
                     <div class="title-container">
                         <div class="circle-img">
-                            <img src="{% static 'image/anamnesi_color.png' %}" alt="" style="width: 30px;height: 30px;">
+                            <img src="{% static 'image/muscolo_scheletrico_color.png' %}" alt="" style="width: 30px;height: 30px;">
                         </div>
                         <h3>Anamnesi muscolo-scheletrica:</h3>
                     </div>
                         
                     <div class="table-container">
+
                         <div class="grid-container">
+
                             <div class="cella-grid">
                                 <p>Terapie infiltrative, interventi chirurgici, etc.:</p>
                                 <input type="text" name="terapie_inf" id="" placeholder="inserisci il valore">
                             </div>
+
                             <div class="cella-grid">
                                 <p>Diagnosi (se il paziente l’ha ricevuta):</p>
                                 <input type="text" name="diagnosi_t" id="" placeholder="inserisci il valore">
                             </div>
+
                         </div>
+
                         <div class="container-quest-special">
                             <p>Comorbilità, sintomi più invalidanti, limitazioni funzionali, aspetti clinico-funzionali più che impattano di più sulla vita quotidiana, etc.:</p>
-                            <!-- <input type="text" name="" id="" placeholder="inserisci il valore"> -->
-                             <textarea name="sintomi_t" id="" placeholder="Inserisci il valore..."></textarea>
+                            <textarea name="sintomi_t" id="" placeholder="Inserisci il valore..."></textarea>
                         </div>
                     </div>      
                 </div>
 
                 <div class="card-container">
                     <div class="title-container">
-                        <img src="{% static 'image/Anamnesi.png' %}" alt="">
+                        <div class="circle-img">
+                            <img src="{% static 'image/esame_generale.png' %}" alt="">
+                        </div>
                         <h3>Esame Generale:</h3>
                     </div>
                         
@@ -236,7 +242,9 @@
 
                 <div class="card-container">
                     <div class="title-container">
-                        <img src="{% static 'image/Muscolo_Scheletrico.png' %}" alt="">
+                        <div class="circle-img">
+                            <img src="{% static 'image/esame_muscolo.png' %}" alt="">
+                        </div>
                         <h3>Esame muscolo-scheletrica:</h3>
                     </div>
                         
@@ -276,7 +284,7 @@
                             </div>
                         </div>
 
-                        <div class="table-row">
+                        <div class="table-row special">
                             <p class="question">Tono muscolare (rigidità , flaccidità ecc.):</p>
 
                             <div class="container-risposte">
@@ -299,7 +307,7 @@
                             </div>
                         </div>
 
-                        <div class="table-row" style="height: 10rem;">
+                        <div class="table-row special">
                             <p class="question">Scala di Ashworth (resistenza di un muscolo sottoposto al movimento passivo):</p>
 
                             <div class="container-risposte">
@@ -335,7 +343,9 @@
 
                 <div class="card-container">
                     <div class="title-container">
-                        <img src="{% static 'image/Postura.png' %}" alt="" id="img-special">
+                        <div class="circle-img">
+                            <img src="{% static 'image/postur.png' %}" alt="" id="img-special">
+                        </div>
                         <h3>Esame posturale:</h3>
                     </div>
                         
@@ -352,7 +362,8 @@
                             </div>
                         </div>
 
-                        <div class="table-row">
+                        <div class="table-row special">
+                            
                             <p class="question">Posizione testa:</p>
 
                             <div class="container-risposte">
@@ -385,7 +396,7 @@
                             </div>
                         </div>
 
-                        <div class="table-row">
+                        <div class="table-row special">
                             <p class="question">Spalle:</p>
 
                             <div class="container-risposte">
@@ -406,7 +417,7 @@
                             </div>
                         </div>
 
-                        <div class="table-row">
+                        <div class="table-row special">
                             <p class="question">Ombelico</p>
 
                             <div class="container-risposte">
@@ -421,7 +432,7 @@
                             </div>
                         </div>
 
-                        <div class="table-row">
+                        <div class="table-row special">
                             <p class="question">Arti inferiori:</p>
 
                             <div class="container-risposte">
@@ -446,7 +457,7 @@
                             </div>
                         </div>
 
-                        <div class="table-row">
+                        <div class="table-row special">
                             <p class="question">Piedi:</p>
 
                             <div class="container-risposte">
@@ -469,7 +480,7 @@
                             </div>
                         </div>
 
-                        <div class="table-row">
+                        <div class="table-row special">
                             <p class="question">Colonna Vertebrale:</p>
 
                             <div class="container-risposte">
@@ -498,7 +509,7 @@
                             </div>
                         </div>
 
-                        <div class="table-row">
+                        <div class="table-row special">
                             <p class="question">Curvatura cervicale:</p>
 
                             <div class="container-risposte">
@@ -523,7 +534,7 @@
                             </div>
                         </div>
 
-                        <div class="table-row">
+                        <div class="table-row special">
                             <p class="question">Curvatura dorsale:</p>
 
                             <div class="container-risposte">
@@ -547,7 +558,7 @@
                             </div>
                         </div>
 
-                        <div class="table-row">
+                        <div class="table-row special">
                             <p class="question">Curvatura lombare:</p>
 
                             <div class="container-risposte">
@@ -571,7 +582,7 @@
                             </div>
                         </div>
 
-                        <div class="table-row">
+                        <div class="table-row special">
                             <p class="question">Posizione del bacino:</p>
 
                             <div class="container-risposte">
@@ -595,7 +606,7 @@
                             </div>
                         </div>
 
-                        <div class="table-row">
+                        <div class="table-row special">
                             <p class="question">Equilibrio statico (in piedi su un piede):</p>
 
                             <div class="container-risposte">
@@ -610,7 +621,7 @@
                             </div>
                         </div>
 
-                        <div class="table-row">
+                        <div class="table-row special">
                             <p class="question">Equilibrio dinamico (camminando su una linea retta):</p>
 
                             <div class="container-risposte">
@@ -625,8 +636,7 @@
                             </div>
                         </div>
 
-
-                        <div class="table-row">
+                        <div class="table-row special">
                             <p class="question">Punti dolenti (palpazione) + livello di dolore (SCALA VAS 0-10):</p>
 
                             <div class="container-risposte">
@@ -660,7 +670,7 @@
                         
                     <div class="table-container">
 
-                        <div class="table-row">
+                        <div class="table-row special">
                             <p class="question">Gravità della disfunzione posturale:</p>
 
                             <div class="container-risposte">
@@ -683,7 +693,7 @@
                             </div>
                         </div>
 
-                        <div class="table-row">
+                        <div class="table-row special">
                             <p class="question">Rischio di infortuni o malformazioni:</p>
 
                             <div class="container-risposte">
@@ -729,7 +739,7 @@
                 </div>
                 
                 <!-- DOMINIO DELLA LOCOMOZIONE -->
-                <div class="question" data-group="5" id="locomozione" data-title="dominio locomozione">
+                <div class="card-container">
 
                         <div class="title-container">
                             <div class="title-subtitle">
